k8s/base/pumpyeong/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pumpyeong
  namespace: pumpyeong-system
spec:
  selector:
    app: pumpyeong
  ports:
    - port: 80
      targetPort: 80
